crates/arteziac/tests/snapshots/parser__empty_char_diagnoses.snap
---
source: crates/arteziac/tests/parser.rs
expression: "check(\"func f() { let d = ''; }\")"
---
File {
    items: [
        Func(
            Func {
                id: NodeId(
                    3,
                ),
                name_span: 5..6,
                receiver_type_span: None,
                receiver: None,
                params: [],
                ret: None,
                body: Block {
                    id: NodeId(
                        2,
                    ),
                    stmts: [
                        Let {
                            id: NodeId(
                                1,
                            ),
                            name_span: 15..16,
                            ty: None,
                            init: Error {
                                id: NodeId(
                                    0,
                                ),
                                span: 19..21,
                            },
                            span: 11..21,
                        },
                    ],
                    tail: None,
                    span: 9..24,
                },
                span: 0..24,
            },
        ),
    ],
}
--- diagnostics ---
[
    Diagnostic {
        severity: Error,
        span: 19..21,
        message: "empty character literal (a char must contain exactly one character)",
        label: None,
        notes: [],
        code: None,
        secondary: [],
    },
]
