crates/arteziac/tests/snapshots/parser__newline_cont.snap
---
source: crates/arteziac/tests/parser.rs
expression: "check(\"func f() { let a = 1 +\\n 2;\\n let b = a; }\")"
---
File {
    items: [
        Func(
            Func {
                id: NodeId(
                    7,
                ),
                name_span: 5..6,
                receiver_type_span: None,
                receiver: None,
                params: [],
                ret: None,
                body: Block {
                    id: NodeId(
                        6,
                    ),
                    stmts: [
                        Let {
                            id: NodeId(
                                3,
                            ),
                            name_span: 15..16,
                            ty: None,
                            init: Binary {
                                id: NodeId(
                                    2,
                                ),
                                op: Add,
                                lhs: Int {
                                    id: NodeId(
                                        0,
                                    ),
                                    span: 19..20,
                                },
                                rhs: Int {
                                    id: NodeId(
                                        1,
                                    ),
                                    span: 24..25,
                                },
                                span: 19..25,
                            },
                            span: 11..25,
                        },
                        Let {
                            id: NodeId(
                                5,
                            ),
                            name_span: 32..33,
                            ty: None,
                            init: Var {
                                id: NodeId(
                                    4,
                                ),
                                span: 36..37,
                            },
                            span: 28..37,
                        },
                    ],
                    tail: None,
                    span: 9..40,
                },
                span: 0..40,
            },
        ),
    ],
}
--- diagnostics ---
[]
