crates/arteziac/tests/snapshots/parser__range_precedence.snap
---
source: crates/arteziac/tests/parser.rs
expression: "check(\"func f() { let r = 0 .. n + 1; }\")"
---
File {
    items: [
        Func(
            Func {
                id: NodeId(
                    7,
                ),
                name_span: 5..6,
                params: [],
                ret: None,
                body: Block {
                    id: NodeId(
                        6,
                    ),
                    stmts: [
                        Let {
                            id: NodeId(
                                5,
                            ),
                            name_span: 15..16,
                            ty: None,
                            init: Range {
                                id: NodeId(
                                    4,
                                ),
                                lo: Int {
                                    id: NodeId(
                                        0,
                                    ),
                                    span: 19..20,
                                },
                                hi: Binary {
                                    id: NodeId(
                                        3,
                                    ),
                                    op: Add,
                                    lhs: Var {
                                        id: NodeId(
                                            1,
                                        ),
                                        span: 24..25,
                                    },
                                    rhs: Int {
                                        id: NodeId(
                                            2,
                                        ),
                                        span: 28..29,
                                    },
                                    span: 24..29,
                                },
                                inclusive: false,
                                span: 19..29,
                            },
                            span: 11..29,
                        },
                    ],
                    tail: None,
                    span: 9..32,
                },
                span: 0..32,
            },
        ),
    ],
}
--- diagnostics ---
[]
