crates/arteziac/tests/snapshots/parser__recovery.snap
---
source: crates/arteziac/tests/parser.rs
expression: "check(\"func f() { let = 5;\\n let ok = 1; }\")"
---
File {
    items: [
        Func(
            Func {
                id: NodeId(
                    5,
                ),
                name_span: 5..6,
                params: [],
                ret: None,
                body: Block {
                    id: NodeId(
                        4,
                    ),
                    stmts: [
                        Let {
                            id: NodeId(
                                1,
                            ),
                            name_span: 15..15,
                            ty: None,
                            init: Int {
                                id: NodeId(
                                    0,
                                ),
                                span: 17..18,
                            },
                            span: 11..18,
                        },
                        Let {
                            id: NodeId(
                                3,
                            ),
                            name_span: 25..27,
                            ty: None,
                            init: Int {
                                id: NodeId(
                                    2,
                                ),
                                span: 30..31,
                            },
                            span: 21..31,
                        },
                    ],
                    tail: None,
                    span: 9..34,
                },
                span: 0..34,
            },
        ),
    ],
}
--- diagnostics ---
[
    Diagnostic {
        severity: Error,
        span: 15..15,
        message: "expected an identifier, found `=`",
        label: None,
        notes: [
            "while parsing a variable name",
        ],
        code: None,
    },
]
