crates/arteziac/tests/snapshots/parser__struct_abiguity.snap
---
source: crates/arteziac/tests/parser.rs
expression: "check(\"func main() { while c { } }\")"
---
File {
    items: [
        Func(
            Func {
                id: NodeId(
                    4,
                ),
                name_span: 5..9,
                receiver_type_span: None,
                receiver: None,
                params: [],
                ret: None,
                body: Block {
                    id: NodeId(
                        3,
                    ),
                    stmts: [
                        While {
                            id: NodeId(
                                2,
                            ),
                            cond: Var {
                                id: NodeId(
                                    0,
                                ),
                                span: 20..21,
                            },
                            body: Block {
                                id: NodeId(
                                    1,
                                ),
                                stmts: [],
                                tail: None,
                                span: 22..25,
                            },
                            span: 14..25,
                        },
                    ],
                    tail: None,
                    span: 12..27,
                },
                span: 0..27,
            },
        ),
    ],
}
--- diagnostics ---
[]
